--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,4 +1,6 @@
 .page-header {
+  padding-left: 10px;
+  padding-right: 10px;
   position: relative;
   background-color: transparent;
   max-width: 1410px;
