--- a/source/sass/blocks/adv.scss
+++ b/source/sass/blocks/adv.scss
@@ -1,7 +1,6 @@
 .adv {
   max-width: 1176px;
-  padding-top: 112px;
-  padding-bottom: 40px;
+  padding: 112px 10px 40px;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
@@ -9,10 +8,10 @@
   flex-wrap: wrap;
 }
 
-.adv__items {
+.adv__item {
   position: relative;
   left: 3px;
-  max-width: 480px;
+  max-width: 40%;
   min-height: 232px;
   background: $white;
   outline: 1px solid #ebebeb;
@@ -21,19 +20,19 @@
   margin-bottom: 30px;
 }
 
-.adv__items svg {
+.adv__item svg {
   margin-block-start: 0;
   margin-block-end: 12px;
 }
 
-.adv__items h3 {
+.adv__item h3 {
   @include fonts(400, 24px, 140.6%);
   margin-block-start: 0;
   margin-block-end: 19px;
   color: $blue;
 }
 
-.adv__items p {
+.adv__item p {
   margin-block-start: 0;
   margin-block-end: 0;
   font-family: "PT Mono", "Arial", sans-serif;
@@ -42,14 +41,14 @@
   color: $dark-gray;
 }
 
-.adv__items:hover,
-.adv__items:hover h3,
-.adv__items:hover p {
+.adv__item:hover,
+.adv__item:hover h3,
+.adv__item:hover p {
   background-color: $blue;
   color: $white;
 }
 
-.adv__items:hover path {
+.adv__item:hover path {
   fill: $white;
 }
 
@@ -61,19 +60,19 @@
     padding-right: 25px;
   }
 
-  .adv__items {
-    width: 297px;
+  .adv__item {
+    max-width: 41.3%;
     min-height: 185px;
     padding: 24px 20px 24px 22px;
     margin-bottom: 31px;
   }
 
-  .adv__items svg {
+  .adv__item svg {
     margin-block-start: 0;
     margin-block-end: 2px;
   }
 
-  .adv__items h3 {
+  .adv__item h3 {
     margin-block-end: 10px;
   }
 }
@@ -86,8 +85,8 @@
     justify-content: space-around;
   }
 
-  .adv__items {
-    min-width: 246px;
+  .adv__item {
+    min-width: 86%;
     margin-bottom: 23px;
     padding-bottom: 29px;
     min-height: 150px;
@@ -95,16 +94,16 @@
     padding-left: 22px;
 
     &:nth-child(3) {
-      padding-right: 10px;
+      min-width: 86.1%;
     }
   }
 
-  .adv__items svg {
+  .adv__item svg {
     margin-block-start: 0;
     margin-block-end: 5px;
   }
 
-  .adv__items h3 {
+  .adv__item h3 {
     max-width: 234px;
     font-size: 20px;
     margin-block-end: 11px;
