--- a/source/sass/blocks/question.scss
+++ b/source/sass/blocks/question.scss
@@ -1,17 +1,22 @@
 .question {
+  padding-left: 10px;
+  padding-right: 10px;
   padding-top: 92px;
   padding-bottom: 109px;
   background: url("../../img/bg-form.jpg") no-repeat;
+  background-color: $blue;
   background-size: cover;
 }
 
 .question__wrapper {
+  display: flex;
+  justify-content: flex-end;
   max-width: 1170px;
   margin: 0 auto;
 }
 
 .question__about {
-  padding-left: 50%;
+  // padding-left: 50%;
 }
 
 .question__about h2 {
@@ -64,7 +69,7 @@
   color: $white;
 }
 
-.form__textarea {
+.question__form textarea {
   font-family: "PT Mono", "Arial", sans-serif;
   font-size: 16px;
   line-height: 134.4%;
@@ -79,7 +84,7 @@
   margin-bottom: 29px;
 }
 
-.form__textarea::placeholder {
+.question__form textarea::placeholder {
   color: $white;
 }
 
@@ -114,6 +119,7 @@
   line-height: 15px;
   color: $white;
   opacity: 0.8;
+  cursor: pointer;
 }
 
 .form__checkbox input {
@@ -130,7 +136,7 @@
     height: 15px;
     background-color: transparent;
     border: 1px solid #e5e5e5;
-    top: -28px;
+    top: -26px;
     left: -200px;
     cursor: pointer;
   }
@@ -152,6 +158,7 @@
 @media (max-width: $tablet) {
   .question {
     @include inner(1023px, 25px);
+    margin: 0;
     padding-top: 80px;
     padding-bottom: 99px;
     background-image: none;
@@ -161,25 +168,29 @@
   .question__wrapper {
     max-width: 622px;
     margin: 0 auto;
+    justify-content: flex-start;
   }
 
   .question__about {
-    padding-left: 0;
+    padding-left: 17px;
   }
 
   .question__about h2 {
     @include fonts(400, 32px, 140.6%);
     margin-block-start: 0;
     margin-block-end: 18px;
+    padding-left: 0;
   }
 
   .question__about p {
     font-family: "PT Mono", "Arial", sans-serif;
     margin-block-end: 54px;
+    padding-left: 0;
   }
 
   .question__form {
-    padding-right: 14px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .form__inputs input {
@@ -189,7 +200,7 @@
     margin-bottom: 43px;
   }
 
-  .form__textarea {
+  .question__form textarea {
     padding: 14px 17px;
     width: 94%;
     height: 132px;
@@ -205,17 +216,18 @@
     max-width: 230px;
     min-height: 32px;
     line-height: 15px;
-    padding-right: 7px;
+    padding-right: 0;
   }
 
   .form__checkbox input::before {
-    left: -208px;
+    left: -202px;
+    top: -26px;
   }
 
   .form__checkbox input:checked {
     &::after {
-      top: -23px;
-      left: -204px;
+      top: -21px;
+      left: -198px;
     }
   }
 }
@@ -223,6 +235,7 @@
 @media (max-width: $mobile) {
   .question {
     @include inner(767px, 15px);
+    margin: 0;
     padding-top: 30px;
     padding-bottom: 41px;
   }
@@ -230,6 +243,12 @@
   .question__wrapper {
     min-width: 290px;
     margin: 0 auto;
+    justify-content: center;
+  }
+
+  .question__about {
+    width: 100%;
+    padding-left: 0;
   }
 
   .question__about h2 {
@@ -265,7 +284,7 @@
     margin-right: 0;
   }
 
-  .form__textarea {
+  .question__form textarea {
     margin: 0 auto;
     padding: 14px 17px;
     width: 256px;
@@ -285,6 +304,6 @@
   }
 
   .form__checkbox {
-    margin-left: 18px;
+    margin-left: 2px;
   }
 }
