--- a/source/sass/utils.scss
+++ b/source/sass/utils.scss
@@ -24,20 +24,30 @@ hr {
   margin: 0;
 }
 
+.main {
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
 .pic-container {
-  background: $dark-gray url("../../img/bg-main.jpg") no-repeat center;
+  flex: 0 0 auto;
+  background: url("../../img/bg-main.jpg") no-repeat center;
   background-size: cover;
   width: 100%;
-  z-index: -1;
+  background-color: $gray-black;
 }
 
 .main-pic-container {
   background: $white url("../../img/bg-white.png") repeat;
   background-size: cover;
   width: 100%;
+  background-color: $white;
 }
 
 .button {
+  cursor: pointer;
   text-transform: uppercase;
   border-radius: 5px;
   text-align: center;
@@ -45,16 +55,18 @@ hr {
 
 @media (max-width: $tablet) {
   .pic-container {
-    background: $dark-gray url("../../img/bg-main-tablet.jpg") no-repeat center;
+    background: url("../../img/bg-main-tablet.jpg") no-repeat center;
     background-size: cover;
     min-height: 520px;
+    background-color: $gray-black;
   }
 }
 
 @media (max-width: $mobile) {
   .pic-container {
-    background: $dark-gray url("../../img/bg-main-mobile.jpg") no-repeat center;
+    background: url("../../img/bg-main-mobile.jpg") no-repeat center;
     background-size: cover;
     min-height: 647px;
+    background-color: $gray-black;
   }
 }
