Исправление по скрипту

--- a/source/sass/blocks/goods.scss
+++ b/source/sass/blocks/goods.scss
@@ -51,19 +51,19 @@
 
   &_produce {
     background: url("../../img/pic-1.png") no-repeat;
-    background-color: #1C3340;
+    background-color: #1c3340;
     background-size: cover;
   }
 
   &_install {
     background: url("../../img/pic-2.png") no-repeat;
-    background-color: #1C3340;
+    background-color: #1c3340;
     background-size: cover;
   }
 
   &_parts {
     background: url("../../img/pic-3.png") no-repeat;
-    background-color: #1C3340;
+    background-color: #1c3340;
     background-size: cover;
   }
 
