--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -97,10 +97,11 @@
 }
 
 .modal__checkbox {
-  display: inline-block;
-  width: 333px;
+  display: flex;
+  justify-content: space-between;
+  width: 375px;
   line-height: 15px;
-  margin-left: 49px;
+  cursor: pointer;
 }
 
 .modal__checkbox_label {
@@ -108,6 +109,7 @@
   line-height: 15px;
   color: $white;
   opacity: 0.8;
+  padding-left: 45px;
   cursor: pointer;
 }
 
@@ -116,6 +118,9 @@
   position: relative;
   width: 0;
   height: 0;
+  margin: 0;
+  cursor: pointer;
+
 
   &::before {
     visibility: visible;
@@ -125,8 +130,8 @@
     height: 15px;
     background-color: transparent;
     border: 1px solid #e5e5e5;
-    top: -25px;
-    left: -112px;
+    top: -10px;
+    left: -48px;
     cursor: pointer;
   }
 
@@ -137,8 +142,8 @@
       content: "";
       width: 8px;
       height: 5px;
-      top: -20px;
-      left: -108px;
+      top: -5px;
+      left: -44px;
       background: url("../../img/check.png") no-repeat 0 0;
     }
   }
