--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -16,7 +16,7 @@
   height: 543px;
   padding: 31px 39px;
   background: $blue;
-  top: 136px;
+  top: 132px;
   left: 3px;
   z-index: 4;
 }
@@ -105,53 +105,61 @@
 }
 
 .modal__checkbox_label {
+  position: relative;
   font-size: 14px;
   line-height: 15px;
   color: $white;
   opacity: 0.8;
   padding-left: 45px;
   cursor: pointer;
-}
-
-.modal__checkbox input {
-  visibility: hidden;
-  position: relative;
-  width: 0;
-  height: 0;
-  margin: 0;
-  cursor: pointer;
-
 
   &::before {
-    visibility: visible;
     position: absolute;
+    display: inline-block;
     content: "";
     width: 15px;
     height: 15px;
     background-color: transparent;
     border: 1px solid #e5e5e5;
-    top: -10px;
-    left: -48px;
+    top: 0;
+    left: 0;
     cursor: pointer;
   }
 
-  &:checked {
-    &::after {
-      visibility: visible;
-      position: absolute;
-      content: "";
-      width: 8px;
-      height: 5px;
-      top: -5px;
-      left: -44px;
-      background: url("../../img/check.png") no-repeat 0 0;
-    }
+  &::after {
+    position: absolute;
+    display: inline-block;
+    content: "";
+    width: 8px;
+    height: 5px;
+    top: 5px;
+    left: 4px;
+    background: url("../../img/check.png") no-repeat 0 0;
   }
+}
+
+.modal__checkbox input + label::after {
+  content: none;
+}
+
+.modal__checkbox input:checked + label::after {
+  content: "";
+}
+
+.modal__checkbox input:focus + label::before {
+  outline: 2px solid $white;
+}
+
+.modal__checkbox input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+  margin: 0;
 }
 
 .modal__closed {
   position: absolute;
-  right: 25px;
+  right: 20px;
   top: 18px;
   width: 20px;
   height: 20px;
@@ -164,7 +172,7 @@
     content: "";
     height: 22px;
     width: 1px;
-    left: 16px;
+    left: 10px;
     background-color: $white;
   }
 
