--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -2,6 +2,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local("Roboto Medium"),
     local("Roboto-Medium"),
     // url("../fonts/robotomedium.woff2") format("woff2"),
@@ -12,6 +13,7 @@
   font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local("Roboto Condensed"),
     local("RobotoCondensed"),
     // url("../fonts/robotocondensedregular.woff2") format("woff2"),
@@ -22,6 +24,7 @@
   font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: local("Roboto Condensed Bold"),
     local("RobotoCondensed-bold"),
     // url("../fonts/robotocondensedbold.woff2") format("woff2"),
@@ -32,6 +35,7 @@
   font-family: "PT Mono";
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local("PT Mono"),
     local("PT-Mono"),
     // url("../fonts/ptmonoregular.woff2") format("woff2"),
