Исправления по замечаниям тестировщика

--- a/source/sass/blocks/company.scss
+++ b/source/sass/blocks/company.scss
@@ -18,7 +18,7 @@
     width: 220px;
     height: 317px;
     position: absolute;
-    background: url("../../img/2005.png") no-repeat;
+    background: url("../img/2005.png") no-repeat;
     left: 6px;
     top: 5px;
   }
@@ -67,7 +67,7 @@
       width: 135px;
       height: 352px;
       position: absolute;
-      background: url("../../img/2005.png") no-repeat;
+      background: url("../img/2005.png") no-repeat;
       background-size: contain;
       top: 8px;
       left: 2px;
