--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -18,7 +18,7 @@
     width: 19px;
     height: 14px;
     position: absolute;
-    background: url("../../img/env.png") no-repeat;
+    background: url("../img/env.png") no-repeat;
     background-size: cover;
     left: 0;
     top: 2px;
@@ -40,7 +40,7 @@
     width: 18px;
     height: 18px;
     position: absolute;
-    background: url("../../img/phone.png") no-repeat;
+    background: url("../img/phone.png") no-repeat;
     background-size: 100%;
     left: 0;
   }
