--- a/source/sass/blocks/start.scss
+++ b/source/sass/blocks/start.scss
@@ -37,7 +37,7 @@
     width: 66px;
     height: 2px;
     position: absolute;
-    background: url("../../img/line.png") no-repeat;
+    background: url("../img/line.png") no-repeat;
     left: 0;
     top: 16px;
   }
