--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -203,6 +203,7 @@
 
   .footer__social {
     padding-top: 10px;
+    justify-content: flex-end;
     order: 3;
   }
 
@@ -227,9 +228,10 @@
     padding-left: 0;
     margin-top: 0;
     margin-bottom: 0;
-    &:not(:first-child) {
-      padding-left: 0;
-    }
+  }
+
+  .footer__items ul:not(:first-child) {
+    padding-left: 0;
   }
 
   .footer__about-contacts {
@@ -273,6 +275,7 @@
 
   .footer__social {
     padding-top: 32px;
+    justify-content: center;
     order: 3;
   }
 
