--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -136,7 +136,7 @@
     height: 5px;
     top: 5px;
     left: 4px;
-    background: url("../../img/check.png") no-repeat 0 0;
+    background: url("../img/check.png") no-repeat 0 0;
   }
 }
 
@@ -205,25 +205,20 @@
     width: 290px;
   }
 
-.modal__inputs input {
-  width: 258px;
-  padding: 14px 17px;
-}
+  .modal__inputs input {
+    width: 258px;
+    padding: 14px 17px;
+  }
 
-.modal__form textarea {
-  width: 258px;
-  padding: 14px 17px;
-}
+  .modal__form textarea {
+    width: 258px;
+    padding: 14px 17px;
+  }
 
-.modal__button-wrapper {
-
-}
-
-.modal__button {
-  width: 290px;
-  padding: 14px 82px;
-  margin-bottom: 31px;
-  font-size: 14px;
-}
-
+  .modal__button {
+    width: 290px;
+    padding: 14px 82px;
+    margin-bottom: 31px;
+    font-size: 14px;
+  }
 }
