--- a/source/sass/blocks/question.scss
+++ b/source/sass/blocks/question.scss
@@ -3,8 +3,8 @@
   padding-right: 10px;
   padding-top: 92px;
   padding-bottom: 109px;
+  background: url("../img/bg-form.jpg") no-repeat;
   background-color: $blue;
-  background: url("../../img/bg-form.jpg") no-repeat;
   background-size: cover;
 }
 
@@ -145,7 +145,7 @@
     height: 5px;
     top: 5px;
     left: -16px;
-    background: url("../../img/check.png") no-repeat 0 0;
+    background: url("../img/check.png") no-repeat 0 0;
     cursor: pointer;
   }
 }
