--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -16,7 +16,7 @@
 }
 
 .footer__about-main {
-  max-width: 220px;
+  max-width: 250px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -61,6 +61,10 @@
   margin-right: 15px;
 }
 
+.footer__social path:hover {
+  fill: $blue;
+}
+
 .footer__about-site {
   margin-right: 10px;
 }
@@ -79,10 +83,12 @@
 .footer__items {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  // justify-content: space-between;
+  flex-grow: 0;
 }
 
 .footer__items ul {
+  max-width: 255px;
   list-style: none;
   padding-left: 0;
   margin-top: 0;
@@ -97,12 +103,16 @@
   opacity: 0.5;
 
   &:not(:first-child) {
-    padding-left: 75px;
+    padding-left: 100px;
   }
 }
 
 .footer__items a {
   @include link($gray-black);
+}
+
+.footer__items a:hover {
+  @include link($blue);
 }
 
 .footer__about-contacts {
@@ -132,13 +142,17 @@
   text-transform: none;
 }
 
+.footer__contact-phone:hover {
+  @include link($blue);
+}
+
 .footer__copyright {
   position: relative;
   bottom: 0;
   margin: 0 auto;
   max-width: 1410px;
   display: flex;
-  justify-content: space-between;
+  // justify-content: space-between;
   flex-wrap: wrap;
   font-family: "PT Mono", "Arial", sans-serif;
   color: $gray-black;
@@ -147,36 +161,44 @@
   font-size: 13px;
   line-height: 24px;
   letter-spacing: 0.04em;
-  padding-top: 13px;
-  padding-bottom: 13px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 13px 10px;
+  flex-grow: 1;
 }
 
 .copyright-container {
   width: 33%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  flex-grow: 1;
+  // justify-content: space-between;
 }
 
 .copyright-container p {
   margin-top: 0;
   margin-block-end: 0;
-  margin-right: 8px;
+  margin-right: 7%;
+  flex-grow: 0;
+  text-align: left;
 }
 
 .footer__copyright-conf {
   @include link($gray-black);
   margin-top: 0;
-  width: 34%;
+  width: 20%;
   text-align: left;
   display: block;
+  flex-grow: 1;
+
+  &:hover {
+    @include link($blue);
+  }
 }
 
-.footer__copyright p {
+.footer__copyright p:last-child {
   margin-block-end: 0;
   margin-top: 0;
+  flex-grow: 0;
+  text-align: right;
 }
 
 @media (max-width: $tablet) {
