--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -23,6 +23,10 @@
     left: 0;
     top: 2px;
   }
+
+  &:hover {
+    color: $blue;
+  }
 }
 
 .main-nav__phone {
@@ -44,6 +48,10 @@
     background-size: 100%;
     left: 0;
   }
+
+  &:hover {
+    color: $blue;
+  }
 }
 
 .main-nav__button {
@@ -54,6 +62,10 @@
   letter-spacing: 0.05em;
   padding: 14px 26px;
   margin-left: 44px;
+
+  &:hover {
+    background-color: $blue;
+  }
 }
 
 @media (max-width: $tablet) {
