--- a/source/sass/blocks/start.scss
+++ b/source/sass/blocks/start.scss
@@ -56,6 +56,11 @@
   border: none;
   padding: 18px 45px;
   letter-spacing: 0.05em;
+
+  &:hover {
+    background-color: $white;
+    color: $blue;
+  }
 }
 
 .start__scroll {
@@ -71,6 +76,11 @@
   color: $white;
   position: relative;
   transform: rotate(-90deg);
+
+  &:hover {
+    color: $blue;
+    opacity: 0.7;
+  }
 }
 
 @media (max-width: $tablet) {
