--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -16,10 +16,11 @@
 }
 
 .footer__about-main {
-  max-width: 250px;
+  width: 29%;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  margin-right: 1%;
 }
 
 .footer__logo {
@@ -51,7 +52,6 @@
 
 .footer__social {
   display: flex;
-  // justify-content: space-between;
   flex-wrap: wrap;
   width: 216px;
 }
@@ -66,7 +66,7 @@
 }
 
 .footer__about-site {
-  margin-right: 10px;
+  width: 46%;
 }
 
 .footer__about-site p,
@@ -83,12 +83,13 @@
 .footer__items {
   display: flex;
   flex-wrap: wrap;
-  // justify-content: space-between;
-  flex-grow: 0;
+  width: 100%;
+  flex-direction: row;
+  flex-grow: 1;
 }
 
 .footer__items ul {
-  max-width: 255px;
+  width: 48%;
   list-style: none;
   padding-left: 0;
   margin-top: 0;
@@ -101,10 +102,7 @@
   line-height: 25px;
   color: $gray-black;
   opacity: 0.5;
-
-  &:not(:first-child) {
-    padding-left: 100px;
-  }
+  flex-grow: 0;
 }
 
 .footer__items a {
@@ -116,7 +114,7 @@
 }
 
 .footer__about-contacts {
-  width: 333px;
+  width: 24%;
 }
 
 .footer__contact p {
@@ -152,7 +150,6 @@
   margin: 0 auto;
   max-width: 1410px;
   display: flex;
-  // justify-content: space-between;
   flex-wrap: wrap;
   font-family: "PT Mono", "Arial", sans-serif;
   color: $gray-black;
@@ -170,7 +167,6 @@
   display: flex;
   flex-wrap: wrap;
   flex-grow: 1;
-  // justify-content: space-between;
 }
 
 .copyright-container p {
@@ -204,7 +200,7 @@
 @media (max-width: $tablet) {
   .footer__about {
     padding: 20px 0 36px;
-    justify-content: flex-start;
+    justify-content: space-between;
   }
 
   .footer__about-main {
@@ -215,6 +211,7 @@
     flex-direction: row;
     justify-content: space-between;
     padding-bottom: 16px;
+    margin-right: 0;
   }
 
   .footer__about-main .copyright-container {
@@ -226,13 +223,17 @@
   .footer__social {
     padding-top: 10px;
     justify-content: flex-end;
+    width: 18%;
     order: 3;
+  }
+
+  .footer__social a:last-child {
+    margin-right: 0;
   }
 
   .footer__logo {
     margin-bottom: 0;
     order: 1;
-    margin-right: 12px;
   }
 
   .footer__about-site {
@@ -247,6 +248,7 @@
   }
 
   .footer__items ul {
+    width: 100%;
     padding-left: 0;
     margin-top: 0;
     margin-bottom: 0;
@@ -257,6 +259,7 @@
   }
 
   .footer__about-contacts {
+    width: 333px;
     padding-right: 25px;
     padding-top: 35px;
   }
@@ -298,6 +301,7 @@
   .footer__social {
     padding-top: 32px;
     justify-content: center;
+    width: 100%;
     order: 3;
   }
 
