--- a/source/sass/blocks/question.scss
+++ b/source/sass/blocks/question.scss
@@ -246,7 +246,7 @@
   .question__wrapper {
     max-width: 622px;
     margin: 0 auto;
-    justify-content: flex-start;
+    justify-content: center;
 
     &::before {
       display: none;
@@ -329,7 +329,7 @@
 
   .question__about {
     width: 100%;
-    padding-left: 0;
+    padding-left: 15px;
   }
 
   .question__about h2 {
