Исправления по замечаниям тестировщика

--- a/source/sass/utils.scss
+++ b/source/sass/utils.scss
@@ -60,6 +60,13 @@ hr {
     background-color: $gray-black;
     min-height: 520px;
   }
+
+  .main-pic-container {
+    background: $white url("../img/triangle.svg") no-repeat;
+    background-position: 230px 92px;
+    background-size: auto;
+    background-color: $white;
+  }
 }
 
 @media (max-width: $mobile) {
@@ -68,5 +75,12 @@ hr {
     background-size: cover;
     background-color: $gray-black;
     min-height: 647px;
+  }
+
+  .main-pic-container {
+    background: $white url("../img/triangle.png") no-repeat;
+    background-position: 135px 66%;
+    background-size: auto;
+    background-color: $white;
   }
 }
