--- a/source/sass/blocks/adv.scss
+++ b/source/sass/blocks/adv.scss
@@ -3,7 +3,6 @@
   padding: 112px 10px 40px;
   margin: 0 auto;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
 }
@@ -11,13 +10,14 @@
 .adv__item {
   position: relative;
   left: 3px;
-  max-width: 40%;
-  min-height: 232px;
+  max-width: 49%;
+  min-height: 299px;
   background: $white;
   outline: 1px solid #ebebeb;
   border-left: 3px solid $blue;
-  padding: 40px 47px 27px 43px;
+  padding: 40px 47px 68px 43px;
   margin-bottom: 30px;
+  box-sizing: border-box;
 }
 
 .adv__item svg {
@@ -58,13 +58,15 @@
     padding-top: 54px;
     padding-bottom: 13px;
     padding-right: 25px;
+    max-width: 100%;
   }
 
   .adv__item {
-    max-width: 41.3%;
-    min-height: 185px;
+    max-width: 48%;
+    min-height: 232px;
     padding: 24px 20px 24px 22px;
     margin-bottom: 31px;
+    box-sizing: border-box;
   }
 
   .adv__item svg {
@@ -86,15 +88,15 @@
   }
 
   .adv__item {
-    min-width: 86%;
+    min-width: 99%;
     margin-bottom: 23px;
     padding-bottom: 29px;
     min-height: 150px;
-    padding-right: 19px;
+    padding-right: 22px;
     padding-left: 22px;
 
-    &:nth-child(3) {
-      min-width: 86.1%;
+    &:nth-of-type(2) {
+      padding-right: 12px;
     }
   }
 
