--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -12,8 +12,9 @@
   position: relative;
   opacity: 1;
   margin: 0 auto;
-  width: 412px;
-  height: 543px;
+  width: 21.46%;
+  max-width: 412px;
+  min-height: 56%;
   padding: 31px 39px;
   background: $blue;
   top: 132px;
@@ -29,7 +30,7 @@
   @include fonts(400, 28px, 140.6%);
   color: $white;
   margin-block-start: 0;
-  margin-block-end: 12px;
+  margin-block-end: 2.2%;
 }
 
 .modal__wrapper p {
@@ -37,21 +38,21 @@
   font-size: 16px;
   line-height: 134.4%;
   color: $white;
-  width: 384px;
+  width: 97%;
   margin-block-start: 0;
-  margin-block-end: 33px;
+  margin-block-end: 9%;
 }
 
 .modal__inputs input {
   font-family: "PT Mono", "Arial", sans-serif;
+  width: 97%;
   font-size: 16px;
   line-height: 134.4%;
-  width: 363px;
   border: 0;
   background-color: #19baff;
   opacity: 0.9;
-  padding: 16px 24px;
-  margin-bottom: 29px;
+  padding: 3% 0 4.4% 3%;
+  margin-bottom: 7.5%;
   border-radius: 0;
   color: $white;
   outline-color: $white;
@@ -78,12 +79,12 @@
   border: 0;
   background-color: #19baff;
   opacity: 0.9;
-  padding: 14px 24px;
-  width: 363px;
-  height: 77px;
+  padding: 2.5% 0 2.5% 4.4%;
+  width: 96%;
+  height: 80px;
   resize: none;
   border-radius: 0;
-  margin-bottom: 20px;
+  margin-bottom: 6%;
   outline-color: $white;
 
   &:required {
@@ -111,11 +112,13 @@
   @include link($white);
   @include fonts(700, 14px, 16px);
   letter-spacing: 0.05em;
-  padding: 15px 167px;
+  width: 100%;
+  text-align: center;
+  padding: 15px 50px;
   background-color: transparent;
   border: 1px solid $white;
   border-radius: 5px;
-  margin-bottom: 33px;
+  margin-bottom: 7.5%;
   box-shadow: none;
 
   &:hover {
@@ -141,7 +144,7 @@
 .modal__checkbox {
   display: flex;
   justify-content: space-between;
-  width: 375px;
+  width: 95%;
   line-height: 15px;
   cursor: pointer;
 
