--- a/source/sass/blocks/question.scss
+++ b/source/sass/blocks/question.scss
@@ -329,7 +329,8 @@
 
   .question__about {
     width: 100%;
-    padding-left: 15px;
+    padding-left: 0;
+    left: 0;
   }
 
   .question__about h2 {
@@ -349,16 +350,17 @@
     flex-direction: column;
     justify-content: center;
     padding-left: 0;
+    overflow-x: hidden;
   }
 
   .form__inputs {
-    margin: 0 auto;
     flex-direction: column;
     margin-bottom: 5px;
+    width: 100%;
   }
 
   .form__inputs input {
-    width: 258px;
+    width: 100%;
     border: 0;
     padding: 14px 17px;
     margin-bottom: 30px;
@@ -366,9 +368,8 @@
   }
 
   .question__form textarea {
-    margin: 0 auto;
     padding: 14px 17px;
-    width: 256px;
+    min-width: 256px;
     height: 75px;
     margin-bottom: 32px;
   }
@@ -378,6 +379,7 @@
   }
 
   .form__button {
+    min-width: 100%;
     width: 290px;
     padding: 14px 40px;
     margin-bottom: 31px;
